--- a/src/index.css
+++ b/src/index.css
@@ -34,6 +34,14 @@
   }
 }
 
+html {
+  width: 500px;
+  height: 600px;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
 body {
   margin: 0;
   font-family: var(--font-sans);
@@ -41,8 +49,9 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-color: var(--background);
   color: var(--foreground);
-  width: 1000px;
-  min-height: 600px;
+  width: 100%;
+  height: 100%;
+  resize: none;
 }
 
 /* Custom scrollbar */
